--- a/hospital-simulation/index.html
+++ b/hospital-simulation/index.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
+    <!--
     <script src="node_modules/phaser/dist/phaser.js"></script>
-    <script src="src/main.js"></script>
-    <p>Hello World</p>
-    <p>Hello World</p>
+    <script src="src/main.js"></script>  -->
+    <div id="phaser-game"></div>
+    <script src="main.js"></script>
 </body>
 
 </html>
