--- a/hospital-simulation/index.html
+++ b/hospital-simulation/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital Simulation</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        #game-container {
+            position: relative;
+        }
+
+        canvas {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.88.2/dist/phaser.min.js"></script>
 </head>
 
 <body>
-    <!--
-    <script src="node_modules/phaser/dist/phaser.js"></script>
-    <script src="src/main.js"></script>  -->
-    <div id="phaser-game"></div>
-    <script src="main.js"></script>
+    <div id="game-container"></div>
+    <script src="src/main.js"></script>
 </body>
 
 </html>
